<resources>
    <string name="app_name">Selfstudy</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_home">HOME</string>
    <string name="title_tests">TESTS</string>
    <string name="title_analysis">ANALYSIS</string>
    <string name="title_doubts">DOUBTS</string>
    <string name="title_profile">PROFILE</string>
    <string name="upgrage">Upgrade now</string>
    <string name="subject">Subjects</string>
    <string name="progress">Progress</string>
</resources>
